Community Bug Fix

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
     "name": "samdoit/module-community",
     "description": "Magento 2 Module communication",
-    "version": "1.1.0",
     "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
+    "suggest": {},
     "autoload": {
         "files": [
             "registration.php"
@@ -10,5 +14,6 @@
         "psr-4": {
             "Samdoit\\Community\\": ""
         }
-    }
+    },
+    "version": "1.1.1"
 }
